FULL CODE REWORK